<resources>
    <string name="app_name">SimpleInstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="description">Description…</string>
    <string name="btnCaptureImage">Take Picture</string>
    <string name="image">Image</string>
    <string name="post">Post</string>
    <string name="sign_up">SIGN UP</string>
    <string name="home">Home</string>
    <string name="addpost">Add Post</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
</resources>