<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_post"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/addpost"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>